# c-misc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: rbtree.h  simple-hash.h
src/: rbtree.c  simple-hash.c
tests/: test-rbtree.c  test-simple-hash.c
